khmer lreq: various

--- a/khmer/index.html
+++ b/khmer/index.html
@@ -96,6 +96,7 @@
 
 <p>This document is pointed to by a separate document, <a href="../gap-analysis/khmr-gap.html"><cite>Khmer Gap Analysis</cite></a>, which describes gaps in support for Khmer on the Web, and prioritises and describes the impact of those gaps on the user.</p>
 <p>Wherever an unsupported feature is indentified through the gap analysis process, the requirements for that feature need to be documented. The gap reports will typically point back to this document for more information.</p>
+<p>As gaps in support for Tibetan are captured, the gaps can be brought to the attention of the relevant spec developer or the browser implementator community. The progress of such work is tracked in the <a href="https://github.com/w3c/i18n-activity/projects/3?card_filter_query=label%3Ax%3Akhmr">Gap Analysis Pipeline</a>.</p>
 <p>This document should contain no reference to a particular technology. For example, it should not say &quot;CSS does/doesn't do such and such&quot;, and it should not describe how a technology, such as CSS, should implement the requirements. It is technology agnostic, so that it will be evergreen, and it simply describes how the script works. The gap analysis document is the appropriate place for all kinds of technology-specific information.</p>
 </section>
 
@@ -179,7 +180,7 @@
 
 <li><a target="_blank" href="https://github.com/w3c/sealreq/issues?q=is%3Aissue+label%3As%3Akhmr+label%3Ai%3Abidirectional_text%2Ci%3Avertical_text">All Khmer issues in the sealreq repo</a></li>
 
-<li><a target="_blank" href="https://github.com/w3c/i18n-activity/issues?q=label%3Asealreq+label%3Aspec-type-issue+label%3Ai%3Abidi-text%2Cvertical-text">Sealreq issues in W3C specs</a></li>
+<li><a target="_blank" href="https://github.com/w3c/i18n-activity/issues?q=label%3Asealreq+label%3Aspec-type-issue+label%3Ai%3Abidi-text%2Cvertical-text">Southeast Asian issues in W3C specs</a></li>
 </ul>
 </dd>
 
@@ -215,13 +216,6 @@
 
 
 
-<style>
-.prompts { font-style: italic; color: #999; font-size: 90%; }
-</style>
-
-
-
-
 
 
 <section id="h_shaping">
@@ -249,7 +243,7 @@
 
 <li><a target="_blank" href="https://github.com/w3c/sealreq/issues?q=is%3Aissue+label%3As%3Akhmr+label%3Ai%3Afonts">All Khmer issues in the sealreq repo</a></li>
 
-<li><a target="_blank" href="https://github.com/w3c/i18n-activity/issues?q=+label%3Asealreq+label%3Aspec-type-issue+label%3Ai%3Afonts">Sealreq issues in W3C specs</a></li>
+<li><a target="_blank" href="https://github.com/w3c/i18n-activity/issues?q=+label%3Asealreq+label%3Aspec-type-issue+label%3Ai%3Afonts">Southeast Asian issues in W3C specs</a></li>
 </ul>
 </dd>
 
@@ -993,8 +987,6 @@
 <aside class="prompts">Does text in a paragraph needs to have flush lines down both sides? Does the script allow punctuation to hang outside the text box at the start or end of a line? Where adjustments are need to make a line flush, how is that done? Does the script shrink/stretch space between words and/or letters? Are word baselines stretched, as in Arabic? What about paragraph indents?</aside>
 
 
-<p>Justification in Khmer adjusts the space between phrases, but also makes certain adjustments to inter-character spacing.</p>
-
 <dl class="reslinks">
 <dt>Requirements</dt>
 <dd>
@@ -1034,6 +1026,12 @@
 </ul>
 </dd>
 </dl>
+
+
+
+
+
+<p>Justification in Khmer adjusts the space between phrases, but also makes certain adjustments to inter-character spacing.</p>
 </section>
 
 
@@ -1046,11 +1044,6 @@
 <h3>Text spacing</h3>
 
 <aside class="prompts">This section looks at ways in which spacing is applied between characters over and above that which is introduced during justification. For example, does the orthography create emphasis or other effects by spacing out the words, letters or syllables in a word? (For justification related spacing, see Text alignment &amp; justification, above).</aside>
-
-
-<p>Cambodian text doesn't appear to use inter-letter spacing in running text, however it is sometimes used in signage. (<a href="https://github.com/w3c/sealreq/issues/9#issuecomment-387971659">@mcdurdin)</a> See an <a href="https://www.phnompenhpost.com/post-property/impasse-tbong-khmum-over-who-starts-building-first">example</a>.</p>
-<p>The rules for where the separations appear are still not clear, however one might expect that it keeps together base + subjoined consonants, and base consonants + vowel signs.</p>
-<p>The situation is less clear for spacing vowel-signs such as <span class="codepoint" translate="no"><span lang="km">ា</span> <span class="uname">U+17B6 KHMER VOWEL SIGN AA</span></span>, which are shown separated in the example linked to above.</p>
 
 <dl class="reslinks">
 <dt>Requirements</dt>
@@ -1092,6 +1085,17 @@
 </ul>
 </dd>
 </dl>
+
+
+
+
+
+
+<p>Cambodian text doesn't appear to use inter-letter spacing in running text, however it is sometimes used in signage. (<a href="https://github.com/w3c/sealreq/issues/9#issuecomment-387971659">@mcdurdin)</a> See an <a href="https://www.phnompenhpost.com/post-property/impasse-tbong-khmum-over-who-starts-building-first">example</a>.</p>
+
+<p>The rules for where the separations appear are still not clear, however one might expect that it keeps together base + subjoined consonants, and base consonants + vowel signs.</p>
+
+<p>The situation is less clear for spacing vowel-signs such as <span class="codepoint" translate="no"><span lang="km">ា</span> <span class="uname">U+17B6 KHMER VOWEL SIGN AA</span></span>, which are shown separated in the example linked to above.</p>
 </section>
 
 
